--- a/src/index.css
+++ b/src/index.css
@@ -63,12 +63,14 @@
   --shadow-card: 0 6px 16px rgba(0, 0, 0, 0.1);
 
   
-  --breakpoint-ssm: 27.813rem;
-  --breakpoint-xsm: 34.063rem;
-  --breakpoint-ml: 52.813rem;
-  --breakpoint-ls: 59.063rem;
-  --breakpoint-lss: 68.75rem;
-  --breakpoint-xls: 75rem;
+  --breakpoint-ssm: 27.813rem;  /*445.008 */
+  --breakpoint-xsm: 34.063rem; /* 545.008px*/
+  --breakpoint-ml: 52.813rem;  /* 845.008px*/
+  --breakpoint-ls: 59.063rem; /* 945.008px*/
+  --breakpoint-lss: 68.75rem;  /* 1100px*/
+  --breakpoint-xls: 75rem;    /* 1200px*/
+  --breakpoint-xlls: 80rem;    /* 1280px*/
+  --breakpoint-xxls: 87.5rem; /* 1400px*/
   /* --breakpoint-2xl: 100rem;
   --breakpoint-3xl: 120rem; */
 
